# avail-telepathy-operator

./: Cargo.toml  README.md
primitives/: Cargo.toml
primitives/src/: types.rs
script/: .env  Cargo.toml
script/src/: lib.rs  operator.rs
src/: operator.rs
