
[workspace]
[package]
name = "avail-telepathy-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avail-telepathy-operator"
path = "src/operator.rs"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
tokio = "1.38.0"
helios = { git = "https://github.com/a16z/helios.git"}
sp1-telepathy-primitives = { path = "../primitives" }
tracing = "0.1.37"
serde = "1.0.203"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
thiserror = "1.0.61"
ethers-core = "2.0.14"
zduny-wasm-timer = "0.2.8"
serde_cbor = "0.11.2"
hex = "0.4.3"
alloy-sol-types = "0.7.7"
clap = "4.5.9"
log = "0.4.22"
env_logger = "0.11.3"
alloy-primitives = "0.7.7"
alloy = { version = "0.1.1", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
consensus-core = { git = "https://github.com/a16z/helios.git"}
common = { git = "https://github.com/a16z/helios.git"}